# Mplayer

./: CMakeLists.txt
mp3/: mplay.sh
src/: mplayer.cpp
